# corevsknots

./: .flake8  .gitignore  METRICS_AND_CHARTS_CALCULATION.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: lint-test.yml  manual_fight_report.yml
data_loader_rust/: Cargo.toml  repo_data.db
data_loader_rust/src/: config.rs  db.rs  errors.rs  git_ops.rs  github.rs  main.rs
frontend_report_viewer/: .gitignore  next.config.mjs  package-lock.json  package.json
frontend_report_viewer/public/: .gitkeep  CORE_vs_KNOTS_FIGHT_REPORT.json
frontend_report_viewer/src/components/: .gitkeep  ComparisonBarChart.tsx  FighterImage.tsx  HealthBarChart.tsx  InlineMetricBar.tsx  MetricCard.tsx  StarRating.tsx
frontend_report_viewer/src/components/sections/: CiCdSection.tsx  CodeReviewSection.tsx  CommitSection.tsx  ContributorSection.tsx  IssueSection.tsx  NodeStatsSection.tsx  OverallScoresSection.tsx  PullRequestSection.tsx  TestSection.tsx
frontend_report_viewer/src/pages/: .gitkeep  index.tsx
frontend_report_viewer/src/pages/api/: node-stats.ts
frontend_report_viewer/src/styles/: FighterImage.module.css  Home.module.css  InlineMetricBar.module.css  MetricCard.module.css  NodeStatsSection.module.css  StarRating.module.css  globals.css
frontend_report_viewer/src/types/: reportTypes.ts
frontend_report_viewer/src/utils/: displayName.ts  metricDisplayUtils.tsx
src/: __init__.py  analyze.py
src/corevsknots/: __init__.py  analyze.py
src/corevsknots/fetch/: __init__.py  cache.py  git_cli.py  github_api.py
src/corevsknots/metrics/: __init__.py  code_review.py  commits.py  contributor.py  pull_requests.py  tests.py
src/corevsknots/report/: __init__.py  chart_generator.py  markdown_generator.py
src/corevsknots/utils/: __init__.py  logger.py  time_utils.py
src/fetch/: cache.py  git_cli.py  github_api.py
src/metrics/: ci_cd.py  code_review.py  commits.py  contributor.py  issues.py  pull_requests.py  tests.py
src/report/: chart_generator.py  markdown_generator.py
src/report/templates/: comparison_template.md  report_template.md
src/utils/: time_utils.py
