[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corevsknots"
version = "0.1.0" # You might want to manage version differently
description = "A tool to analyze repository health of Bitcoin Core vs Bitcoin Knots"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "AbdelStark", email = "placeholder@example.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "matplotlib>=3.4.0",
    "numpy>=1.20.0",
    "docopt>=0.6.2",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
testing = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.0",
    "flake8>=3.9.0",
    "black>=21.5b2",
    "mypy>=0.812",
    "isort>=5.9.0",
    "tox>=3.24.0",
]

[project.scripts]
bitcoin-repo-health = "corevsknots.bin.bitcoin_repo_health:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }
py-modules = []

[tool.setuptools.package-data]
corevsknots = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
