[metadata]
name = corevsknots
description = A tool to analyze repository health of Bitcoin Core vs Bitcoin Knots
author = AbdelStark
author_email =
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
